<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
        <TextView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:fontFamily="@raw/varela_round_regular"
            android:textSize="20sp"
            android:text="@string/back"
            android:textColor="#756AB6"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@raw/varela_round_regular"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/calendar_header"
            android:textColor="@color/black"
            android:textSize="40sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/previousDayButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ui_element_left_arrow" />
            <TextView
                android:id="@+id/date_display"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@raw/varela_round_regular"
                android:gravity="center"
                android:text="@string/ddmm_placeholder"
                android:textColor="@color/black"
                android:textSize="34sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextDayButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ui_element_right_arrow"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/year_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@raw/varela_round_regular"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/year_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>