<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainContainer"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:weightSum="5"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_header"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@raw/varela_round_regular"
        android:paddingBottom="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="38dp"
            android:text="@string/profile_subheader"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:text="@string/profile_change"
            android:fontFamily="@raw/varela_round_regular"
            android:textColor="#756AB6"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_with_bg"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:id="@+id/personalDetails"
        >
        <ImageView
            android:layout_width="91dp"
            android:layout_height="100dp"
            android:contentDescription="@string/default_profile"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:src="@drawable/simple_user_default_icon_free_png" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profileName"
                android:fontFamily="@raw/varela_round_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/profile_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profileEmail"
                android:fontFamily="@raw/varela_round_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/profile_email"
                android:paddingTop="5dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profileNumber"
                android:fontFamily="@raw/varela_round_regular"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/profile_number"
                android:paddingTop="4dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@raw/varela_round_regular"
                android:id="@+id/profileAddress"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/profile_address"
                android:paddingTop="4dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_with_bg"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:fontFamily="@raw/varela_round_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="Friends"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="friends_arrow"
            android:src="@drawable/ui_element_dropdown_button_collapsed" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_with_bg"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:fontFamily="@raw/varela_round_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="Travels"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="friends_arrow"
            android:src="@drawable/ui_element_dropdown_button_collapsed" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_with_bg"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:fontFamily="@raw/varela_round_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="Settings"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="friends_arrow"
            android:src="@drawable/ui_element_dropdown_button_collapsed" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_with_bg"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:fontFamily="@raw/varela_round_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="Help"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="friends_arrow"
            android:src="@drawable/ui_element_dropdown_button_collapsed" />
    </LinearLayout>
</LinearLayout>